<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<resources>

    <!-- common -->
    <string name="qchat_close">关闭</string>
    <string name="qchat_save">保存</string>
    <string name="qchat_cancel">取消</string>
    <string name="qchat_create">创建</string>
    <string name="qchat_sure">确定</string>
    <string name="qchat_ensure">确认</string>
    <string name="qchat_leave">退出</string>
    <string name="qchat_delete">删除</string>
    <string name="qchat_edit">编辑</string>
    <string name="qchat_complete">完成</string>

    <!--    server setting-->
    <string name="qchat_delete_server">删除服务器</string>
    <string name="qchat_leave_server">退出服务器</string>
    <string name="qchat_roles">身份组</string>
    <string name="qchat_roles_count">身份组（%s）</string>
    <string name="qchat_member">成员</string>
    <string name="qchat_permission">权限</string>
    <string name="qchat_server_topic">服务器主题</string>
    <string name="qchat_server_name">服务器名称</string>
    <string name="qchat_server_setting">服务器设置</string>
    <string name="qchat_nickname">昵称</string>
    <string name="qchat_edit_nickname">编辑昵称</string>
    <string name="qchat_click_edit_and_edit_nickname">点击编辑修改昵称</string>
    <string name="qchat_kick_someone">踢除%s</string>
    <string name="qchat_kick_someone_title">踢除成员</string>
    <string name="qchat_forbid_someone">屏蔽%s</string>
    <string name="qchat_server_id">ID:%d</string>
    <string name="qchat_content_null">无</string>

    <!--    chat role-->
    <string name="qchat_identifies_name">身份组名称</string>
    <string name="qchat_member_manager">成员管理</string>
    <string name="qchat_modify_member">修改成员</string>
    <string name="qchat_add_member">添加成员</string>
    <string name="qchat_common_permission">通用权限</string>
    <string name="qchat_manager_server">管理服务器</string>
    <string name="qchat_manage_role">管理角色</string>
    <string name="qchat_manage_channel_property">管理所有频道属性</string>
    <string name="qchat_modify_self_server_member">修改自己服务器成员信息</string>
    <string name="qchat_modify_other_server_member">修改他人服务器成员信息</string>
    <string name="qchat_invite_others_enter_server">邀请他人进入server权限</string>
    <string name="qchat_more_with_all">更多 (共%d个)</string>
    <string name="qchat_pack_up_with_all">收起 (共%d个)</string>
    <string name="qchat_plz_input_role_name">请输入身份组名称</string>

    <!-- server role -->
    <string name="qchat_role_delete">删除身份组</string>
    <string name="qchat_role_delete_one_role">确认删除“%s”身份组吗？</string>
    <string name="qchat_role_sort">身份组排序</string>
    <string name="qchat_delete_member">删除成员</string>
    <string name="qchat_sort">排序</string>
    <string name="qchat_select">选择</string>
    <string name="qchat_sure_with_num">确定%d</string>
    <string name="qchat_role_sort_ruler">你只能管理比自己最高身份更低的身份组</string>
    <string name="qchat_everyone_role_ruler">所有服务器成员默认权限</string>
    <string name="qchat_delete_some_member">确认要移除“%s”成员吗？</string>

    <!-- permission -->
    <string name="qchat_message_permission">消息权限</string>
    <string name="qchat_send_message">发送消息</string>
    <string name="qchat_send">发送</string>
    <string name="qchat_send_quick_comment">发送快捷评论</string>
    <string name="qchat_thread_replay">Thread 回复</string>
    <string name="qchat_at_permission">\t@权限</string>
    <string name="qchat_manage_message">管理消息</string>
    <string name="qchat_check_history_message">查看历史消息</string>
    <string name="qchat_delete_other_msg">所有频道中删除他人消息</string>
    <string name="qchat_revoke_other_msg">所有频道撤回他人消息</string>
    <string name="qchat_at_anyone_permission">\@任意人的权限</string>
    <string name="qchat_at_all_permission">\@所有人的权限</string>
    <string name="qchat_at_role_permission">\@身份组</string>

    <string name="qchat_member_permission">成员权限</string>
    <string name="qchat_kick_other">踢除他人</string>
    <string name="qchat_kick_member">踢除成员</string>
    <string name="qchat_forbid_other">封禁他人</string>
    <string name="qchat_change_other_nickname">变更他人昵称</string>
    <string name="qchat_create_new_role_group">创建新身份组</string>

    <string name="qchat_permission_deny_tips">您拒绝了权限申请，该功能将无法使用</string>
    <string name="qchat_permission_default">请在设置页面添加相关权限</string>
    <string name="qchat_permission_camera">请在设置页面添加相机权限</string>
    <string name="qchat_permission_audio">请在设置页面添加麦克风权限</string>
    <string name="qchat_permission_storage">请在设置页面添加读写手机存储权限</string>

    <!--server create -->
    <string name="qchat_fragment_no_server_tip">暂无服务器，\n赶紧去添加心仪的服务器吧</string>
    <string name="qchat_create_title">创建服务器</string>
    <string name="qchat_crate_close">关闭</string>
    <string name="qchat_crate_by_self">自己创建</string>
    <string name="qchat_crate_by_other">加入别人服务器</string>
    <string name="qchat_crate_upload_portrait">上传头像</string>
    <string name="qchat_crate_tip">创建</string>
    <string name="qchat_join_error_title">无法加入？</string>
    <string name="qchat_join_error_desc">你被该服务器封禁，无法加入。</string>
    <string name="qchat_join_error_ok">知道了</string>
    <string name="qchat_search_no_tip">暂无你要的服务器ID</string>
    <string name="qchat_search_tip">搜索服务器ID</string>
    <string name="qchat_take_photo">拍照</string>
    <string name="qchat_get_from_album">从相册选择</string>
    <string name="qchat_input_server_name">请输入服务器名称</string>
    <string name="qchat_msg_channel">消息频道</string>
    <string name="qchat_no_Channel_with_server">该服务器下暂无频道</string>
    <string name="qchat_server_state_joined">已加入</string>
    <string name="qchat_server_state_join">加入</string>
    <string name="qchat_server_state_applied">已申请</string>
    <string name="qchat_server_had_appled_tip">请求已发送</string>
    <string name="qchat_server_member_invite_tip">邀请信息已发送</string>
    <string name="qchat_server_photo_crop">裁剪</string>
    <string name="qchat_server_channel_name_fix">频道%s</string>
    <string name="qchat_server_request_fail">操作失败</string>
    <string name="qchat_server_request_exception">服务器异常</string>
    <string name="qchat_network_error">当前网络错误</string>
    <string name="qchat_user_cancel">用户取消</string>
    <string name="qchat_network_error_tip">当前网络不可用，请检查你当网络设置。</string>
    <string name="qchat_server_name_empty_error">服务名称不能为空</string>

    <!-- channel-->
    <string name="qchat_channel_setting_title">频道设置</string>
    <string name="qchat_channel_create_title">创建新频道</string>

    <string name="qchat_channel_channel_name">频道名称</string>
    <string name="qchat_channel_channel_name_hint">设置名称</string>
    <string name="qchat_channel_topic">频道主题</string>
    <string name="qchat_channel_topic_hint">请设置主题</string>
    <string name="qchat_channel_permission_title">权限</string>
    <string name="qchat_channel_permission_setting">权限设置</string>
    <string name="qchat_channel_names_list">名单</string>
    <string name="qchat_channel_white_name_list">白名单</string>
    <string name="qchat_channel_black_name_list">黑名单</string>
    <string name="qchat_channel_delete">删除频道</string>
    <string name="qchat_channel_type">频道类型</string>
    <string name="qchat_channel_type_public">公开</string>
    <string name="qchat_channel_type_private">私密</string>
    <string name="qchat_channel_delete_dialog_title">确定删除此频道？</string>
    <string name="qchat_channel_delete_error">频道删除失败</string>
    <string name="qchat_channel_update_error">频道修改失败</string>
    <string name="qchat_channel_update_empty_error">频道名称不能为空</string>
    <string name="qchat_channel_message_copy_success">消息复制成功</string>

    <string name="qchat_channel_name_empty_error">频道名称不能为空</string>
    <string name="qchat_channel_create_error">频道创建失败</string>
    <string name="qchat_channel_create_error_count_limit">数量超限</string>
    <string name="qchat_channel_fetch_error">获取频道失败</string>
    <string name="qchat_channel_fetch_role_error">获取频道身份组失败</string>

    <!-- add role -->
    <string name="qchat_channel_add_role_title">添加身份组</string>
    <string name="qchat_fetch_role_error">获取身份组失败</string>
    <string name="qchat_add_role_error">添加身份组失败</string>

    <!-- add memeber -->
    <string name="qchat_channel_add_member_title">添加成员</string>
    <string name="qchat_channel_fetch_member_error">获取频道成员失败</string>
    <string name="qchat_channel_add_member_error">添加成员失败</string>
    <string name="qchat_channel_add_member_empty">暂无成员</string>
    <string name="qchat_member_selector_max_count">最多选择10个好友</string>

    <!-- role permission-->
    <string name="qchat_role_list_title">身份组</string>
    <string name="qchat_member_list_title">成员</string>
    <string name="qchat_more_title">查看更多(共%s个)</string>
    <string name="qchat_channel_role_delete_title">移除身份组</string>
    <string name="qchat_channel_role_delete_content">确定要移除身份组%s吗？</string>
    <string name="qchat_channel_member_delete_title">移除成员</string>
    <string name="qchat_channel_member_delete_content">确定要移除成员%s吗？</string>
    <string name="qchat_no_permission">操作无权限</string>
    <string name="qchat_no_permission_content">暂无权限在该频道发言</string>

    <string name="qchat_channel_role_delete_error">身份组删除失败</string>
    <string name="qchat_channel_member_delete_error">成员删除失败</string>
    <string name="qchat_channel_member_add_error">成员添加失败</string>
    <string name="qchat_role_permission_title">%s权限设置</string>
    <string name="qchat_role_permission_general_title">通用权限</string>
    <string name="qchat_role_permission_role_member_title">成员权限</string>
    <string name="qchat_role_permission_channel_attr">管理频道属性</string>
    <string name="qchat_role_permission_manager_member">管理频道名单</string>
    <string name="qchat_role_permission_channel_check">查看频道</string>
    <string name="qchat_role_permission_channel_permission">管理频道权限</string>
    <string name="qchat_role_permission_message_permission">消息权限</string>
    <string name="qchat_role_permission_delete_other_message">频道中删除他人消息</string>
    <string name="qchat_role_permission_rollback_other_message">频道撤回他人消息</string>
    <string name="qchat_role_permission_at_others">\@任意人的权限</string>
    <string name="qchat_role_permission_at_all">\@所有人的权限</string>
    <string name="qchat_channel_permission_send_message">发送消息</string>
    <string name="qchat_channel_permission_send_comment">发送快捷评论</string>
    <string name="qchat_channel_permission_thread_reply">Thread回复</string>
    <string name="qchat_channel_permission_at">\@权限</string>
    <string name="qchat_channel_permission_manager_message">管理消息</string>
    <string name="qchat_channel_permission_history_message">查看历史消息</string>

    <string name="qchat_channel_permission_update_error">权限更新失败</string>
    <string name="dialog_permission_tips">请在设置页面添加相关权限</string>

    <!-- member permission-->
    <string name="qchat_channel_member_permission_title">成员权限设置</string>

   <!--name list -->
    <string name="qchat_channel_white_name_list_title">白名单</string>
    <string name="qchat_channel_black_name_list_title">黑名单</string>
    <string name="qchat_channel_name_list_delete_title">移除成员</string>
    <string name="qchat_channel_name_list_delete_content">确定要移除成员%s吗？</string>

    <!-- message -->
    <string name="qchat_channel_message_title_pre">#</string>
    <string name="qchat_channel_message_fetch_error">消息获取失败，请重试</string>
    <string name="qchat_channel_message_send_error">消息发送失败</string>
    <string name="qchat_channel_message_send_hint">发送给&#160;&#160;%s</string>
    <!-- error-->
    <string name="qchat_server_empty_error">服务为空</string>
    <string name="qchat_channel_empty_error">频道信息为空</string>

    <!-- empty -->
    <string name="qchat_empty_text">查询%s为空</string>
    <string name="qchat_develop_text">暂未开放</string>

    <!--message -->
    <string name="qchat_message_voice_in">松开发送，按住滑到空白区域取消</string>
    <string name="qchat_message_camera_unavailable">相机不可用</string>
    <string name="qchat_pressed_to_speak">按住说话</string>
    <string name="qchat_pressed_audio_too_short">录制时间过短</string>
    <string name="qchat_message_not_support_tips">[未知消息体]</string>


</resources>