<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_eff1f4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/channel_create_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_55_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView android:id="@+id/channel_create_left_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/color_333333"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/dimen_20_dp"
            android:gravity="center_vertical"
            android:text="@string/qchat_cancel"/>

        <TextView android:id="@+id/channel_create_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:text="@string/qchat_channel_create_title"/>

        <TextView android:id="@+id/channel_create_right_tv"
            android:layout_width="@dimen/dimen_50_dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/color_337eff"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dimen_20_dp"
            android:gravity="center_vertical|end"
            android:text="@string/qchat_create"/>

        <View android:id="@+id/channel_create_right_cover"
            android:layout_width="@dimen/dimen_50_dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dimen_20_dp"
            android:background="@color/color_eff1f4"
            android:alpha="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout >

    <!-- channel name-->
    <TextView android:id="@+id/channel_create_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="@dimen/dimen_8_dp"
        android:layout_marginStart="@dimen/dimen_32_dp"
        android:textColor="@color/color_666666"
        android:text="@string/qchat_channel_channel_name"/>

    <com.netease.yunxin.kit.common.ui.widgets.CleanableEditText
        android:id="@+id/channel_create_name_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dp"
        android:background="@color/color_white"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_20_dp"
        android:textColor="@color/color_333333"
        android:layout_marginTop="@dimen/dimen_8_dp"
        app:corner_radius="@dimen/dimen_8_dp"
        app:hintText="@string/qchat_channel_channel_name_hint"
        android:maxLength="50"
        tools:ignore="MissingConstraints" />

    <!-- channel name-->
    <TextView android:id="@+id/channel_create_topic_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="@dimen/dimen_8_dp"
        android:layout_marginStart="@dimen/dimen_32_dp"
        android:textColor="@color/color_666666"
        android:text="@string/qchat_channel_topic"/>

    <com.netease.yunxin.kit.common.ui.widgets.CleanableEditText
        android:id="@+id/channel_create_topic_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dp"
        android:background="@color/color_white"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_20_dp"
        android:textColor="@color/color_333333"
        app:hintText="@string/qchat_channel_topic_hint"
        android:layout_marginTop="@dimen/dimen_8_dp"
        app:corner_radius="@dimen/dimen_8_dp"
        android:maxLength="64"
        tools:ignore="MissingConstraints" />

    <!-- channel type select -->
    <TextView android:id="@+id/channel_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:layout_marginStart="@dimen/dimen_32_dp"
        android:textColor="@color/color_666666"
        android:text="@string/qchat_channel_type"/>

    <com.netease.yunxin.kit.common.ui.widgets.RoundTextView
        android:id="@+id/channel_create_type_rtv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50_dp"
        android:background="@color/color_white"
        android:layout_marginStart="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_20_dp"
        app:layout_constraintTop_toBottomOf="@+id/channel_setting_name_list_tv"
        android:layout_marginTop="@dimen/dimen_8_dp"
        app:corner_radius="@dimen/dimen_8_dp"
        android:drawableEnd="@drawable/ic_right_arrow"
        android:paddingEnd="@dimen/dimen_16_dp"
        android:paddingStart="@dimen/dimen_12_dp"
        android:textColor="@color/color_333333"
        android:text="@string/qchat_channel_type_public"
        android:gravity="center_vertical"
        tools:ignore="MissingConstraints" />
</LinearLayout>