<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_eef1f4">

    <com.netease.yunxin.kit.common.ui.widgets.BackTitleBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dimen_20_dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_size_12"
            android:text="@string/qchat_identifies_name"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:layout_marginStart="@dimen/dimen_12_dp" />

        <EditText
            android:id="@+id/chat_role_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50_dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/color_333333"
            android:background="@drawable/white_round_bg"
            android:maxLength="20"
            android:hint="@string/qchat_plz_input_role_name"
            android:paddingStart="@dimen/dimen_16_dp"
            android:layout_marginTop="@dimen/dimen_8_dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_666666"
            android:text="@string/qchat_member_manager"
            android:textSize="@dimen/text_size_12"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:layout_marginStart="@dimen/dimen_12_dp" />

        <RelativeLayout
            android:id="@+id/rly_member_add"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50_dp"
            android:background="@drawable/white_round_bg"
            android:layout_marginTop="@dimen/dimen_8_dp"
            android:padding="@dimen/dimen_16_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qchat_add_member"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/text_size_12"
                android:layout_centerVertical="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_right_arrow"
                android:layout_centerVertical="true" />
        </RelativeLayout>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_round_bg"
        android:layout_marginHorizontal="@dimen/dimen_20_dp"
        android:layout_marginTop="@dimen/dimen_16_dp" />
</LinearLayout>