<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="30dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_shape_photo_choice_dialog"
        app:layout_constraintBottom_toBottomOf="@id/tvGetFromAlbum"
        app:layout_constraintTop_toTopOf="@id/tvTakePhoto" />

    <TextView
        android:id="@+id/tvTakePhoto"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/qchat_take_photo"
        android:textColor="@color/color_333333"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/tvGetFromAlbum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_dedede"
        app:layout_constraintTop_toBottomOf="@id/tvTakePhoto" />

    <TextView
        android:id="@+id/tvGetFromAlbum"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/qchat_get_from_album"
        android:textColor="@color/color_333333"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/tvCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="42dp"
        android:background="@drawable/bg_shape_photo_choice_dialog"
        android:gravity="center"
        android:text="@string/qchat_cancel"
        android:textColor="@color/color_333333"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>